@@ -25,6 +25,11 @@
 #include <stdlib.h>
 #include <errno.h>
 #include <assert.h>
+
+/* These 2 defines are needed */
+/* Alsa API changed between 0.9 and 1.0 */
+#define ALSA_PCM_OLD_HW_PARAMS_API
+#define ALSA_PCM_OLD_SW_PARAMS_API
 #include <alsa/asoundlib.h>
 
 #include <fts/fts.h>
